<resources>
    <string name="app_name">PolarisNEW</string>

    <string name="collection">Collection</string>
    <string name="collection_directories">Directories</string>
    <string name="collection_random">Random</string>
    <string name="collection_recent">Recent</string>
    <string name="collection_artists">Artists</string>
    <string name="collection_albums">Albums</string>
    <string name="collection_genres">Genres</string>

    <string name="browse_error">An error occurred while listing content</string>
    <string name="browse_error_retry">Retry</string>
    <string name="browse_disc_number">Disc %1$d</string>

    <string name="playlists">Playlists</string>

    <string name="now_playing">Now Playing</string>
    <string name="player_artwork">Album Artwork</string>
    <string name="player_previous_track">Previous Track</string>
    <string name="player_next_track">Next Track</string>
    <string name="player_play_pause">Play/Pause</string>
    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_opening">Opening…</string>
    <string name="player_buffering">Buffering…</string>
    <string name="player_exit">Exit</string>
    <string name="player_no_song">[No song]</string>
    <string name="player_unknown">[unknown]</string>

    <string name="queue">Queue</string>
    <string name="queue_empty">Make a playlist by swiping music from your collection to here.</string>
    <string name="queue_streaming">Streaming</string>
    <string name="queue_downloading">Downloading</string>
    <string name="queue_cached">Cached Locally</string>
    <string name="queue_confirmation_clear">Clear the queue?</string>

    <string name="search">Search</string>

    <string name="pref_server_address">Server address</string>
    <string name="pref_server_port">Server port</string>
    <string name="pref_username">Username</string>
    <string name="pref_password">Password</string>
    <string name="pref_offline">Offline Mode</string>
    <string name="pref_num_songs_preload">Songs to preload</string>
    <string name="pref_offline_cache_size">Offline cache size</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_start_screen">Start screen</string>

    <string name="pref_key_server_address" translatable="false">server_address</string>
    <string name="pref_key_server_port" translatable="false">server_port</string>
    <string name="pref_key_username" translatable="false">username</string>
    <string name="pref_key_password" translatable="false">password</string>
    <string name="pref_key_offline" translatable="false">offline</string>
    <string name="pref_key_num_songs_preload" translatable="false">num_songs_preload</string>
    <string name="pref_key_offline_cache_size" translatable="false">offline_cache_size</string>
    <string name="pref_key_theme" translatable="false">theme</string>
    <string name="pref_key_start_screen" translatable="false">start_screen</string>

    <string name="pref_num_songs_preload_unlimited">Unlimited</string>
    <string name="pref_num_songs_preload_none">None</string>
    <string name="pref_offline_cache_size_unlimited">Unlimited</string>
    <string name="pref_theme_system">System</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_theme_light">Light</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="clear">Clear</string>
    <string name="shuffle">Shuffle</string>

    <string name="ordering">Ordering</string>
    <string name="ordering_sequence">Default</string>
    <string name="ordering_repeat_one">Repeat One</string>
    <string name="ordering_repeat_all">Repeat All</string>

    <string name="add_to_queue">Queue</string>
    <string name="queued">Added to queue</string>
    <string name="queuing">Fetching…</string>
    <string name="queuing_error">Something went wrong</string>
    <string name="album_artwork">Album Artwork</string>
    <string name="playback_error">A media playback error occurred</string>

    <string name="media_player_service_description">Audio playback service for Polaris</string>
    <string name="download_service_description">Music download service for Polaris</string>
    <string name="scrobble_service_description">Last.fm scrobbling service for Polaris</string>

    <string name="media_notifications_channel_description">Polaris audio playback controls</string>

    <string name="about_polaris_github">Polaris on Github</string>
    <string name="about_polaris_android_github">Polaris Android on Github</string>

    <string name="url_polaris_github" translatable="false">https://github.com/agersant/polaris</string>
    <string name="url_polaris_android_github" translatable="false">https://github.com/agersant/polaris-android</string>
</resources>
