<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="agersant.polaris.features.about.AboutFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/launcher_background"
        android:src="@drawable/launcher_icon_foreground" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="?textAppearanceHeadline4" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?textAppearanceSubtitle1"
        tools:text="0.2.7" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/polaris_github"
        style="@style/AboutLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/github_mark"
        android:text="@string/about_polaris_github" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/polaris_android_github"
        style="@style/AboutLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/github_mark"
        android:text="@string/about_polaris_android_github" />

</LinearLayout>