<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/player_field_padding"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintBottom_toTopOf="@id/artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Title" />

    <ImageView
        android:id="@+id/artist_icon"
        android:layout_width="@dimen/player_text_icon_size"
        android:layout_height="@dimen/player_text_icon_size"
        android:layout_marginEnd="@dimen/player_text_icon_margin"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintBottom_toBottomOf="@id/artist"
        app:layout_constraintEnd_toStartOf="@id/artist"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/artist"
        app:tint="?android:textColorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="@dimen/player_field_padding"
        android:paddingEnd="@dimen/player_field_padding"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/artist_icon"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Artist" />

    <ImageView
        android:id="@+id/album_icon"
        android:layout_width="@dimen/player_text_icon_size"
        android:layout_height="@dimen/player_text_icon_size"
        android:layout_marginEnd="@dimen/player_text_icon_margin"
        android:src="@drawable/baseline_album_24"
        app:layout_constraintBottom_toBottomOf="@id/album"
        app:layout_constraintEnd_toStartOf="@id/album"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/album"
        app:tint="?android:textColorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="@dimen/player_field_padding"
        android:paddingEnd="@dimen/player_field_padding"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintBottom_toTopOf="@id/control_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/album_icon"
        app:layout_constraintTop_toBottomOf="@id/artist"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Album" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading"
        style="?android:progressBarStyleSmall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:indeterminate="true"
        android:indeterminateDuration="@android:integer/config_mediumAnimTime"
        app:layout_constraintBottom_toBottomOf="@id/current_time"
        app:layout_constraintEnd_toEndOf="@id/current_time"
        app:layout_constraintStart_toStartOf="@id/current_time"
        app:layout_constraintTop_toTopOf="@id/current_time" />

    <LinearLayout
        android:id="@+id/control_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/player_control_bar_height"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/slider">

        <ImageView
            android:id="@+id/skip_previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/player_previous_track"
            android:src="@drawable/baseline_skip_previous_24"
            app:tint="?colorOnBackground" />

        <ImageView
            android:id="@+id/pause_toggle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/player_play_pause"
            android:src="@drawable/baseline_play_arrow_24"
            app:tint="?colorOnBackground" />

        <ImageView
            android:id="@+id/skip_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/player_next_track"
            android:src="@drawable/baseline_skip_next_24"
            app:tint="?colorOnBackground" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/current_time"
        android:layout_width="@dimen/player_time_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/player_time_margin"
        android:textAlignment="textEnd"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/slider"
        tools:text="0:16" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/total_time"
        app:layout_constraintStart_toEndOf="@id/current_time"
        app:thumbRadius="@dimen/player_slider_thumb_radius"
        app:haloRadius="@dimen/player_slider_halo_radius"
        tools:value="0.07" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_time"
        android:layout_width="@dimen/player_time_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/player_time_margin"
        android:textAlignment="textEnd"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/slider"
        tools:text="12:49" />

</androidx.constraintlayout.widget.ConstraintLayout>
